Fixed align in exercises for browser safari and IE DT#5496

--- a/main/css/dokeos_blue/default.css
+++ b/main/css/dokeos_blue/default.css
@@ -2120,7 +2120,14 @@ div.comments {
 	border-bottom:1px solid #999999;
 	border-top:1px solid #999999;
 	background-color:#efefef;
-	height:100%;
+	padding:2px;
+	margin-bottom: 5px;
+	vertical-align:middle;
+	float:left;
+	width:100%;
+}
+
+.content_table {
 	padding:2px;
 	margin-bottom: 5px;
 	vertical-align:middle;
@@ -2439,10 +2446,8 @@ button.refresh {
 button.upload {
     background-image:url(images/button_upload.gif);
 }
-
-
 .icon_image_content {
-	width:70px;
+	width:80px;
 	height:5em;
 	text-align: center;
 	padding-top: 3px;
@@ -2453,6 +2458,9 @@ button.upload {
 .question_menu {
 	list-style:none;
 	float:left;
+	padding:0px;
+	margin:-2px;
+	min-height:100px;
 }
 .question_menu li {
 	float:left;
